[WTR] Memory leaks in TestRunner::deliverWebIntent() https://bugs.webkit.org/show_bug.cgi?id=97111

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-09-19
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Fix memory leaks in WKBundleIntentCreate() by adopting strings
created with WKStringCreateWithUTF8CString().

* WebProcess/InjectedBundle/API/c/WKBundleIntent.cpp:
(WKBundleIntentCreate):

Tools:

Fix memory leaks in deliverWebIntent() by adopting strings
created with WKStringCreateWithUTF8CString().

* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::deliverWebIntent):

Canonical link: https://commits.webkit.org/115076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129022 268f45cc-cd09-0410-ab3c-d52691b4dbfc